more changes to register s3